Increase field size of Action Buttons box to make sure text doesn't wrap

--- a/app/assets/stylesheets/peoplefinder/application.scss
+++ b/app/assets/stylesheets/peoplefinder/application.scss
@@ -360,7 +360,7 @@ textarea.form-control {
   padding-bottom: 0.3em;
   position: relative;
   top: 15px;
-  width: 60%;
+  width: 100%;
   float: right;
 
   @media screen and (max-width: 640px) {
